skip deletedAt when using faker and expose errors from updateGameDefinition
